# FightingGO

./: CMakeLists.txt  Camera.h  Gun.cpp  Gun.h  Light.h  Mesh.h  Model.cpp  Model.h  Monster.cpp  Monster.h  README.md  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Tree.cpp  Tree.h  glad.cpp  ifCollision.cpp  ifCollision.h  main.cpp  stb_image.cpp  surface.cpp  surface.h
Model/banana/: banana.mtl
Model/end1/: file.mtl
Model/gass/: Map__17_Gradient_Ramp.tga  gass.mtl
Model/gun/: file.mtl
Model/gun2/: file.mtl
Model/long stone/: a.psd  file.mtl
Model/modernhouse/: file.mtl  houseRamp.tga
Model/simple/: file.mtl
Shader/: shader.fs
